Avoid having both of a gallery item image's dimensions set to auto
It seems that causes layout shift when the images load.

--- a/css/media.less
+++ b/css/media.less
@@ -26,8 +26,6 @@
 .image-gallery-thumbnail {
   block-size: auto;
   display: block;
-  inline-size: auto;
-  max-block-size: @gallery-item-max-block-size;
   max-inline-size: 100%;
 }
 
